[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Portal/Portal_0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Portal.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Light/Light0.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 60 )

[node name="Portal" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TeleportArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportArea"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 2.0
energy = 1.5
shadow_enabled = true
shadow_item_cull_mask = 3

[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Portal_body_exited"]
[connection signal="body_entered" from="TeleportArea" to="." method="_on_TeleportArea_body_entered"]
